--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Fitnote</string>
-    <string name="google_maps_key">AIzaSyDmRb43UfSeRuMysVRx924LKaWbzjqFavc</string>
+    <string name="google_maps_key">AIzaSyCjxsPkipSTvqfYBJfDoiIXHwwBU1YTv1w</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="let_s_go">Let\'s Go..</string>
     <string name="name">Name</string>
@@ -11,4 +11,12 @@
     <string name="workout">Workout</string>
     <string name="statistics">Statistics</string>
     <string name="settings">Settings</string>
+    <string name="_00_00_00">00:00:00</string>
+    <string name="distance_km">Distance (km)</string>
+    <string name="calories">Calories</string>
+    <string name="avg_speed_km_h">Avg Speed (km/h)</string>
+    <string name="_0_00">0.00</string>
+    <string name="start_run">Start Run</string>
+    <string name="pause">Pause</string>
+    <string name="finish">Finish</string>
 </resources>
