--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="start_run">Start Run</string>
     <string name="pause">Pause</string>
     <string name="finish">Finish</string>
+    <string name="resume">Resume</string>
 </resources>
